[package]
name = "too-many-ray-tracers"
version = "0.1.0"
authors = ["esqu1 <brandbest1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.0"
rand = "0.7.0"
indicatif = "0.17.3"
num-traits = "0.2"

[profile.release]
debug = 1
